Fixed layout issue for some device

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body{
     background-color: #FFF;
     max-width: 1920px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 #propic{
@@ -304,6 +305,48 @@ body{
     #info-wrapper{
         width: 90%;
     }
+}
+
+@media screen and (max-height: 740px) {
+    #propic{
+        width: 270px;
+        height: 270px;
+    }
+
+    #socials{
+        margin-top: 0;
+    }
+
+    #contacts{
+        margin-top: 0;
+    }
+
+    .list li {
+        margin: 0;
+    }
+}
+
+@media screen and (max-height: 740px) and (min-width: 1100px){
+    #console-wrapper {
+        width: 680px;
+        height: 412px;
+        padding: 72px 68px;
+    }
+}
+
+@media screen and (max-height: 620px) {
+    #propic{
+        width: 200px;
+        height: 200px;
+    }
+
+    #console-wrapper {
+        width: 560px;
+        height: 340px;
+        padding: 60px 56px;
+        margin-top: 0;
+    }
+
 }
 
 @media screen and (max-height: 500px) {
